# loco-council-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
_types/: retrieval_types.py
controllers/: doc_controller.py  search_controller.py
scripts/: demo_index.py  demo_search.py  download_models.py  inspect_db.py  rebuild_venv.bat
services/: pipeline.py  progress_reporter.py
services/indexing/: borderless_table.py  ocr_engine.py  post_ocr_character_corrector.py  preprocessor.py  table_header_analyzer.py
services/indexing/chunkers/: financial_table_chunker.py  text_chunker.py
services/llm/: client.py
services/llm/prompts/: __init__.py  answer.py  financial_chunker.py  rerank.py  text_chunker.py
services/llm/tools/: __init__.py  fetch_page.py  submit_chunks.py  submit_scores.py
services/retrieval/: embedder.py  reranker.py  retriever.py
storage/: doc_manager.py  history_store.py
tests/: conftest.py  test_color_format.py  test_doc_controller.py  test_doc_manager.py  test_entity_correction.py  test_history_store.py  test_imports.py  test_llm_client.py  test_llm_client_token_tracking.py  test_pipeline.py  test_reranker.py  test_retrieval_types.py  test_retriever.py  test_search_controller.py  test_text_chunker.py
tests/streamlit/: smoke_app.py  test_ui_panels.py
ui/: components.py  doc_mgmt_panel.py  layout.py  search_panel.py  session_state.py
utils/: __init__.py  common.py  logging.py
