[project]
name = "loco-council-agent"
version = "0.1.0"
description = "RAG 智能检索工作台"
requires-python = ">=3.10"
dependencies = [
    # OCR
    "paddlepaddle~=3.0.0",
    "paddleocr>=3.0.0",
    "pymupdf>=1.25.2",
    # 图像处理
    "numpy>=1.24.3,<2.0.0",
    "img2table>=1.3.0",
    # 向量和检索
    "lancedb~=0.16.0",
    "sentence-transformers~=5.5.0",
    "transformers>=4.41.0,<5.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "huggingface-hub>=0.19.0",
    # 表格识别
    "paddlex[ocr]>=3.0.0",
    # 工具
    "pandas>=2.2.0",
    "pydantic>=2.5.0",
    "tqdm>=4.66.1",
    "beautifulsoup4>=4.12.0",
    # LLM
    "openai>=1.6.1",
    # 前端
    "streamlit>=1.35.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_imports.py"
